# scirag

./: .coverage  .gitignore  CONSOLIDATED_TESTING_SUITE.md  ENHANCED_SCIRAG_STATUS_REPORT.md  INTEGRATION_TEST_FIXES_COMPLETE.md  PYTEST_IMPLEMENTATION_PROGRESS.md  README.md  TESTING_RECOMMENDATION.md  TESTING_STRATEGY.md  TEST_COVERAGE_FINAL_SUMMARY.md  ci_test.py  demo_enhanced_scirag.py  pyproject.toml  requirements.txt  run_dev_tests.py  run_tests.py  test_enhanced_direct.py  test_enhanced_standalone.py  test_integration.py  test_real_document_processing.py  test_real_documents.py  test_standalone_enhanced.py  working_demo.py
.../: fork_to_personal.sh
datasets/: CosmoPaperQA.parquet
docs/: download_papers.py
embeddings/: gemini_gemini-embedding-001_embeddings.npy  openai_text-embedding-3-large_embeddings.npy
markdowns/: 1604.01424v3.md  1807.06209v4.md  2010.00619v2.md  2201.02202v1.md  2503.14454v1.md
notebooks/: ai_eval.ipynb  docagent.ipynb  eval.ipynb  human_eval-2.ipynb  human_eval.ipynb  norag_gemini.ipynb  norag_perplexity.ipynb  plot.ipynb  scirag.ipynb  scirag_gemini.ipynb  scirag_ocr.ipynb  scirag_ocr_pri.ipynb  scirag_openai.ipynb  scirag_paperqa2.ipynb  scirag_qwends.ipynb  scirag_vertex.ipynb
paperqa/: __init__.py  settings.py
results/: gemini_embedding_results.pkl  gemini_norag_results.pkl  openai_pdf_vector_store_results.pkl  paperqa2_vanilla_gpt4.1_results.pkl  vertexai_rag_results_final.pkl
scirag/: __init__.py  config.py  dataset.py  norag_perplexity.py  ocr.py  scirag.py  scirag_enhanced.py  scirag_evaluator.py  scirag_gemini.py  (+7 more)
(+353 files in other folders)
